# causal-inference-toolkit

./: .coverage  .gitignore  LICENSE  README.md  SPEC.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
demo_out/: ihdp.csv
demo_out2/: lalonde.csv
docs/: changelog.md  contributing.md  index.md
docs/api/: analysis.md  core.md  visualization.md  wrappers.md
docs/cli/: ab-test.md  estimate.md  graph.md  sensitivity.md  uplift.md
docs/concepts/: causal-model.md  estimation.md  identification.md  refutation.md  sensitivity.md
docs/examples/: ab-uplift.md  ihdp.md  lalonde.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/user-guide/: ab-testing.md  did.md  dowhy.md  econml.md  synthetic-control.md  uplift.md  visualization.md
examples/notebooks/: 01_ihdp_demo.ipynb  02_lalonde_psid_demo.ipynb  03_ab_testing_uplift_demo.ipynb
site/: 404.html  index.html  objects.inv  sitemap.xml
site/search/: search_index.json
src/causal_toolkit/: __init__.py  cli.py
src/causal_toolkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/causal_toolkit/analysis/: __init__.py  ab_test.py  did.py  sensitivity.py  synthetic_control.py
src/causal_toolkit/cli/: main.py
src/causal_toolkit/core/: __init__.py  base.py
src/causal_toolkit/demo/: app.py
src/causal_toolkit/reports/: __init__.py  generator.py
src/causal_toolkit/utils/: data.py
src/causal_toolkit/visualization/: graphs.py  plots.py
src/causal_toolkit/wrappers/: __init__.py  dowhy.py  econml.py
tests/: test_cli.py  test_core.py  test_extended.py
tests/unit/: test_app.py  test_did.py  test_reports.py  test_synthetic_control.py
