[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causal-toolkit"
version = "0.1.0"
description = "Production-ready causal inference toolkit wrapping DoWhy/EconML with sensitivity analysis, A/B testing, uplift modeling, and counterfactuals"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["causal-inference", "dowhy", "econml", "uplift-modeling", "ab-testing", "sensitivity-analysis", "counterfactuals"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
authors = [
    {name = "Anuj Singh", email = "anuj@example.com"}
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "networkx>=3.1",
    "dowhy>=0.9",
    "econml>=0.15",
    "causalinference>=0.1",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "plotly>=5.15",
    "graphviz>=0.20",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "pyyaml>=6.0",
    "typer>=0.9",
    "rich>=13.5",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-hypothesis>=2.0",
    "hypothesis>=6.8",
    "ruff>=0.1",
    "mypy>=1.5",
    "pre-commit>=3.5",
    "mkdocs>=1.5",
    "mkdocs-material>=9.4",
    "mkdocstrings[python]>=0.23",
    "mkdocs-jupyter>=0.9",
    "jupyter>=1.0",
    "nbconvert>=7.16",
]
viz = [
    "pygraphviz>=1.10",
    "graphviz>=0.20",
]
notebooks = [
    "jupyter>=1.0",
    "nbconvert>=7.16",
    "ipykernel>=6.25",
]

[project.urls]
Homepage = "https://github.com/yourusername/causal-toolkit"
Repository = "https://github.com/yourusername/causal-toolkit"
Issues = "https://github.com/yourusername/causal-toolkit/issues"
Documentation = "https://yourusername.github.io/causal-toolkit"

[tool.setuptools.packages.find]
where = ["src"]
include = ["causal_toolkit*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM", "T20", "PTH", "RUF"]
ignore = ["S101", "T201"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "T201"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=causal_toolkit --cov-report=term-missing --cov-report=html"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]

[tool.coverage.run]
source = ["src/causal_toolkit"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[project.scripts]
causal-toolkit = "causal_toolkit.cli:app"